tests/core/snapshots/test-input-out.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

input Filter {
  a: Int
}

type MyType {
  id: String!
  name: String
}

type Query {
  queryTest(filter: Filter): [MyType]
  @graphQL(
    args: [{ key: "filter", value: "{{.args.filter}}" }]
    url: "http://localhost:8083/mesh"
    name: "getMyType"
  )
}
