tests/core/snapshots/test-js-request-response.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream(onRequest: "onRequest")
@link(src: "test.js", type: Script)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  hello: String @http(url: "http://localhost:3000/hello")
  hi: String @http(url: "http://localhost:3000/hi")
}
