tests/core/snapshots/test-list-args.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(queryValidation: true)
@upstream
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  f1(q: [Int!]!): T1
  @http(
    url: "http://localhost:3000/api"
    query: [{ key: "q", value: "{{.args.q}}" }]
  )
}

type T1 {
  numbers: [Int]
}
