tests/core/snapshots/test-merge-input.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(src: "schema_0.graphql", type: Config)
@link(src: "schema_1.graphql", type: Config) {
  query: Query
}

input Test {
  b: String
}

type Query {
  foo(x: Test): Boolean @http(url: "http://jsonplaceholder.typicode.com/foo")
}
