tests/core/snapshots/test-merge-nested.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(src: "schema_0.graphql", type: Config)
@link(src: "schema_1.graphql", type: Config) {
  query: Query
}

type Foo {
  """
  test2
  """
  a: String
  """
  test1
  """
  b: String
}

type Query {
  hi: Foo @expr(body: { b: "hello" }) @expr(body: { a: "world" })
}
