tests/core/snapshots/test-merge-union.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(src: "schema_0.graphql", type: Config)
@link(src: "schema_1.graphql", type: Config) {
  query: Query
}

union FooBar = Bar | Baz | Foo

type Bar {
  bar: String
}

type Baz {
  baz: String
}

type Foo {
  a: String
  foo: String
}

type Query {
  foo: FooBar @http(url: "http://jsonplaceholder.typicode.com/foo")
}
