tests/core/snapshots/test-modify.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

input Foo {
  bar: String
}

type Query {
  foo(input: Foo): String
  @http(url: "http://jsonplaceholder.typicode.com/foo")
  @modify(name: "data")
}
