tests/core/snapshots/test-multiple-config-types.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(id: "types", src: "types.graphql", type: Config)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

input Input {
  id: Int
  name: String
}

type Output {
  id: Int
  name: String
}

type Query {
  bar(input: Input): Output
  @expr(body: { id: "{{.args.input.id}}", name: "{{.args.input.name}}" })
}
